# tgaiagent

./: README.md  pyproject.toml
agent/: __init__.py  app.py  config.py  llm.py  logging_setup.py  memory.py  planner.py  policy.py  prompts.py  runtime.py  telegram_gateway.py  tools.py  types.py
data/: agent.db  telegram.session
telegram_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_policy.py  test_tools.py
